--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,5 +24,5 @@
   "hostRequirements": {
     "gpu": "optional"
   },
-  "postCreateCommand": "chmod -R 755 /workspace && find /workspace -name '*.sh' -exec chmod +x {} \\; && pip install -e . && python -c 'import torch; print(f\"CUDA available: {torch.cuda.is_available()}\")'"
+  "postCreateCommand": "chmod -R 755 . && find . -name '*.sh' -exec chmod +x {} \\; && pip install -e . && python -c 'import torch; print(f\"CUDA available: {torch.cuda.is_available()}\")'"
 }
