--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,68 @@
-# Core Libraries
-numpy==1.26.4
-pandas==2.1.4
-pyarrow==15.0.0
-scipy==1.13.1
+# Core dependencies
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
 
-# Pinned Ray to a version compatible with gymnasium>=0.29.1
-ray[rllib]==2.9.3
-gymnasium==0.28.1 # Pinned to the version required by ray[rllib]==2.9.3
-pandas-ta==0.3.14b0
-scikit-learn==1.5.2
-mlflow==2.12.1
-tensorboard==2.17.0
+# Deep Learning
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
+
+# Reinforcement Learning
+gymnasium>=0.29.0
+stable-baselines3>=2.0.0
+ray[rllib]>=2.6.0
+ray[tune]>=2.6.0
+
+# Data and APIs
+yfinance>=0.2.0
+alpha-vantage>=2.3.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+
+# Feature Engineering
+ta>=0.10.0
+talib-binary>=0.4.0
+scipy>=1.11.0
+
+# Configuration and CLI
+pyyaml>=6.0
+typer>=0.9.0
+click>=8.1.0
+argparse>=1.4.0
+
+# Monitoring and Logging
+mlflow>=2.6.0
+tensorboard>=2.13.0
+wandb>=0.15.0
+loguru>=0.7.0
+
+# Testing
+pytest>=7.4.0
+pytest-cov>=4.1.0
+pytest-mock>=3.11.0
+
+# Code Quality
+black>=23.7.0
+isort>=5.12.0
+ruff>=0.0.284
+mypy>=1.5.0
+pre-commit>=3.3.0
+
+# Development Tools
+jupyter>=1.0.0
+ipykernel>=6.25.0
+notebook>=7.0.0
+
+# Production
+gunicorn>=21.2.0
+fastapi>=0.100.0
+uvicorn>=0.23.0
+pydantic>=2.0.0
 
 # Utilities
-pyyaml==6.0 # Pinned to a version compatible with alpaca-trade-api
-tqdm==4.67.1
-structlog==25.4.0
-yfinance==0.2.65
-requests==2.32.3
-beautifulsoup4==4.12.3
-psutil==5.9.8
-aiohttp==3.8.2 # Pinned to a version compatible with alpaca-trade-api
-empyrical==0.5.5
-riskfolio-lib==7.0.1
-quantstats==0.0.64
-stockstats==0.6.5
-pytorch-lightning==2.5.2
-pytorch-forecasting==1.4.0
-optuna==3.6.2
-feedparser==6.0.11
-vaderSentiment==3.3.2
-nltk==3.9.1
-typer==0.16.0
-backtrader==1.9.78.123
-exchange_calendars==4.10.1
-alpaca-py==0.42.0
-alpha_vantage==3.0.0
-nats-py==2.6.0
+tqdm>=4.65.0
+python-dotenv>=1.0.0
+pathlib2>=2.3.0
