--- a/.env
+++ b/.env
@@ -1,1 +1,175 @@
+# Trading RL Agent Environment Variables
+# =====================================
+
+# Environment and System Settings
+TRADING_RL_AGENT_ENVIRONMENT=development
+TRADING_RL_AGENT_DEBUG=true
+TRADING_RL_AGENT_LOG_LEVEL=INFO
+
+# Alpaca Trading API Configuration
+ALPACA_API_KEY=PKMUA1L43MR0XQDARJLE
+ALPACA_SECRET_KEY=PlcskwlGCvcHRPNYVNCCc5GVCcog9D9hFMAKeyAF
+ALPACA_BASE_URL=https://paper-api.alpaca.markets
+ALPACA_DATA_URL=https://data.alpaca.markets
+ALPACA_PAPER_TRADING=true
+ALPACA_USE_V2=true
+ALPACA_MAX_RETRIES=3
+ALPACA_RETRY_DELAY=1.0
+ALPACA_WEBSOCKET_TIMEOUT=30
+ALPACA_ORDER_TIMEOUT=60
+ALPACA_CACHE_DIR=data/alpaca_cache
+ALPACA_CACHE_TTL=3600
+ALPACA_DATA_FEED=iex
+ALPACA_EXTENDED_HOURS=false
+ALPACA_MAX_POSITION_SIZE=10000.0
+ALPACA_MAX_DAILY_TRADES=100
+ALPACA_LOG_LEVEL=INFO
+ALPACA_LOG_TRADES=true
+
+# Data Source API Keys
 POLYGON_API_KEY=B4YRkoaOUPR7R6y5DmNG4QHW7awgeP3z
+ALPHAVANTAGE_API_KEY=your_alphavantage_key_here
+NEWSAPI_KEY=your_newsapi_key_here
+SOCIAL_API_KEY=your_social_api_key_here
+
+# Data Configuration
+TRADING_RL_AGENT_DATA__PRIMARY_SOURCE=yfinance
+TRADING_RL_AGENT_DATA__SYMBOLS=["AAPL", "GOOGL", "MSFT", "TSLA", "AMZN"]
+TRADING_RL_AGENT_DATA__START_DATE=2023-01-01
+TRADING_RL_AGENT_DATA__END_DATE=2024-01-01
+TRADING_RL_AGENT_DATA__TIMEFRAME=1d
+TRADING_RL_AGENT_DATA__REAL_DATA_RATIO=0.95
+TRADING_RL_AGENT_DATA__MIN_SAMPLES_PER_SYMBOL=2500
+TRADING_RL_AGENT_DATA__SEQUENCE_LENGTH=60
+TRADING_RL_AGENT_DATA__PREDICTION_HORIZON=1
+TRADING_RL_AGENT_DATA__OVERLAP_RATIO=0.8
+TRADING_RL_AGENT_DATA__TECHNICAL_INDICATORS=true
+TRADING_RL_AGENT_DATA__SENTIMENT_FEATURES=true
+TRADING_RL_AGENT_DATA__MARKET_REGIME_FEATURES=true
+TRADING_RL_AGENT_DATA__ALTERNATIVE_DATA=false
+TRADING_RL_AGENT_DATA__OUTLIER_THRESHOLD=5.0
+TRADING_RL_AGENT_DATA__MISSING_VALUE_THRESHOLD=0.25
+TRADING_RL_AGENT_DATA__CACHE_DIR=data/cache
+TRADING_RL_AGENT_DATA__CACHE_TTL_HOURS=24
+TRADING_RL_AGENT_DATA__DATA_PATH=data/
+TRADING_RL_AGENT_DATA__OUTPUT_DIR=outputs/datasets
+TRADING_RL_AGENT_DATA__MAX_WORKERS=4
+TRADING_RL_AGENT_DATA__CHUNK_SIZE=1000
+TRADING_RL_AGENT_DATA__USE_MEMORY_MAPPING=true
+
+# Model Configuration
+TRADING_RL_AGENT_MODEL__TYPE=cnn_lstm
+TRADING_RL_AGENT_MODEL__ALGORITHM=sac
+TRADING_RL_AGENT_MODEL__BATCH_SIZE=32
+TRADING_RL_AGENT_MODEL__LEARNING_RATE=0.001
+TRADING_RL_AGENT_MODEL__WEIGHT_DECAY=0.00001
+TRADING_RL_AGENT_MODEL__OPTIMIZER=adam
+TRADING_RL_AGENT_MODEL__EPOCHS=100
+TRADING_RL_AGENT_MODEL__EARLY_STOPPING_PATIENCE=10
+TRADING_RL_AGENT_MODEL__REDUCE_LR_PATIENCE=5
+TRADING_RL_AGENT_MODEL__REDUCE_LR_FACTOR=0.5
+TRADING_RL_AGENT_MODEL__TOTAL_TIMESTEPS=1000000
+TRADING_RL_AGENT_MODEL__EVAL_FREQUENCY=10000
+TRADING_RL_AGENT_MODEL__SAVE_FREQUENCY=50000
+TRADING_RL_AGENT_MODEL__LOSS_FUNCTION=mse
+TRADING_RL_AGENT_MODEL__METRICS=["mae", "rmse", "correlation", "r2_score"]
+TRADING_RL_AGENT_MODEL__MODEL_SAVE_PATH=models/
+TRADING_RL_AGENT_MODEL__CHECKPOINT_DIR=models/checkpoints
+TRADING_RL_AGENT_MODEL__SAVE_BEST_ONLY=true
+TRADING_RL_AGENT_MODEL__SAVE_FREQUENCY_EPOCHS=5
+TRADING_RL_AGENT_MODEL__DEVICE=auto
+TRADING_RL_AGENT_MODEL__NUM_WORKERS=4
+TRADING_RL_AGENT_MODEL__MIXED_PRECISION=true
+TRADING_RL_AGENT_MODEL__GRADIENT_CHECKPOINTING=false
+
+# Backtest Configuration
+TRADING_RL_AGENT_BACKTEST__START_DATE=2024-01-01
+TRADING_RL_AGENT_BACKTEST__END_DATE=2024-12-31
+TRADING_RL_AGENT_BACKTEST__SYMBOLS=["AAPL", "GOOGL", "MSFT"]
+TRADING_RL_AGENT_BACKTEST__INITIAL_CAPITAL=100000.0
+TRADING_RL_AGENT_BACKTEST__COMMISSION_RATE=0.001
+TRADING_RL_AGENT_BACKTEST__SLIPPAGE_RATE=0.0001
+TRADING_RL_AGENT_BACKTEST__MAX_POSITION_SIZE=0.1
+TRADING_RL_AGENT_BACKTEST__MAX_LEVERAGE=1.0
+TRADING_RL_AGENT_BACKTEST__STOP_LOSS_PCT=0.02
+TRADING_RL_AGENT_BACKTEST__TAKE_PROFIT_PCT=0.05
+TRADING_RL_AGENT_BACKTEST__METRICS=["total_return", "sharpe_ratio", "max_drawdown", "win_rate"]
+TRADING_RL_AGENT_BACKTEST__OUTPUT_DIR=backtest_results
+TRADING_RL_AGENT_BACKTEST__SAVE_TRADES=true
+TRADING_RL_AGENT_BACKTEST__SAVE_PORTFOLIO=true
+TRADING_RL_AGENT_BACKTEST__GENERATE_PLOTS=true
+TRADING_RL_AGENT_BACKTEST__PLOT_DIR=plots/backtest
+
+# Live Trading Configuration
+TRADING_RL_AGENT_LIVE__EXCHANGE=alpaca
+TRADING_RL_AGENT_LIVE__PAPER_TRADING=true
+TRADING_RL_AGENT_LIVE__SYMBOLS=["AAPL", "GOOGL", "MSFT"]
+TRADING_RL_AGENT_LIVE__ORDER_TIMEOUT=60
+TRADING_RL_AGENT_LIVE__MAX_SLIPPAGE=0.001
+TRADING_RL_AGENT_LIVE__COMMISSION_RATE=0.001
+TRADING_RL_AGENT_LIVE__EXECUTION_FREQUENCY=5
+TRADING_RL_AGENT_LIVE__MARKET_HOURS_ONLY=true
+TRADING_RL_AGENT_LIVE__MAX_POSITION_SIZE=0.1
+TRADING_RL_AGENT_LIVE__MAX_LEVERAGE=1.0
+TRADING_RL_AGENT_LIVE__MAX_DRAWDOWN=0.15
+TRADING_RL_AGENT_LIVE__STOP_LOSS_PCT=0.02
+TRADING_RL_AGENT_LIVE__TAKE_PROFIT_PCT=0.05
+TRADING_RL_AGENT_LIVE__VAR_CONFIDENCE_LEVEL=0.05
+TRADING_RL_AGENT_LIVE__VAR_TIME_HORIZON=1
+TRADING_RL_AGENT_LIVE__KELLY_FRACTION=0.25
+TRADING_RL_AGENT_LIVE__RISK_PER_TRADE=0.02
+TRADING_RL_AGENT_LIVE__INITIAL_CAPITAL=100000.0
+TRADING_RL_AGENT_LIVE__REBALANCE_FREQUENCY=3600
+TRADING_RL_AGENT_LIVE__MAX_POSITIONS=10
+TRADING_RL_AGENT_LIVE__MONITORING_INTERVAL=60
+TRADING_RL_AGENT_LIVE__ALERTS_ENABLED=true
+TRADING_RL_AGENT_LIVE__EMAIL_ALERTS=false
+TRADING_RL_AGENT_LIVE__SLACK_ALERTS=false
+
+# Monitoring Configuration
+TRADING_RL_AGENT_MONITORING__LOG_LEVEL=INFO
+TRADING_RL_AGENT_MONITORING__STRUCTURED_LOGGING=true
+TRADING_RL_AGENT_MONITORING__EXPERIMENT_NAME=trading_rl_agent
+TRADING_RL_AGENT_MONITORING__TRACKING_URI=sqlite:///mlruns.db
+TRADING_RL_AGENT_MONITORING__MLFLOW_ENABLED=true
+TRADING_RL_AGENT_MONITORING__TENSORBOARD_ENABLED=true
+TRADING_RL_AGENT_MONITORING__TENSORBOARD_LOG_DIR=logs/tensorboard
+TRADING_RL_AGENT_MONITORING__METRICS_ENABLED=true
+TRADING_RL_AGENT_MONITORING__METRICS_FREQUENCY=300
+TRADING_RL_AGENT_MONITORING__HEALTH_CHECK_INTERVAL=30
+TRADING_RL_AGENT_MONITORING__ALERTS_ENABLED=true
+TRADING_RL_AGENT_MONITORING__EMAIL_ALERTS=false
+TRADING_RL_AGENT_MONITORING__SLACK_ALERTS=false
+
+# Infrastructure Configuration
+TRADING_RL_AGENT_INFRASTRUCTURE__DISTRIBUTED=false
+TRADING_RL_AGENT_INFRASTRUCTURE__RAY_ADDRESS=
+TRADING_RL_AGENT_INFRASTRUCTURE__NUM_WORKERS=4
+TRADING_RL_AGENT_INFRASTRUCTURE__GPU_ENABLED=true
+TRADING_RL_AGENT_INFRASTRUCTURE__MODEL_REGISTRY_PATH=models
+TRADING_RL_AGENT_INFRASTRUCTURE__EXPERIMENT_TRACKING=mlflow
+TRADING_RL_AGENT_INFRASTRUCTURE__ENABLE_MONITORING=true
+TRADING_RL_AGENT_INFRASTRUCTURE__METRICS_PORT=8080
+TRADING_RL_AGENT_INFRASTRUCTURE__HEALTH_CHECK_INTERVAL=30
+TRADING_RL_AGENT_INFRASTRUCTURE__USE_GPU=false
+TRADING_RL_AGENT_INFRASTRUCTURE__MAX_WORKERS=4
+TRADING_RL_AGENT_INFRASTRUCTURE__MEMORY_LIMIT=8GB
+
+# Hyperparameter Optimization Configuration
+TRADING_RL_AGENT_HYPEROPT__ENABLED=false
+TRADING_RL_AGENT_HYPEROPT__N_TRIALS=50
+TRADING_RL_AGENT_HYPEROPT__TIMEOUT=3600
+
+# Production Configuration
+TRADING_RL_AGENT_PRODUCTION__MODEL_FORMAT=torchscript
+TRADING_RL_AGENT_PRODUCTION__MODEL_VERSION=v1.0.0
+TRADING_RL_AGENT_PRODUCTION__API_HOST=127.0.0.1
+TRADING_RL_AGENT_PRODUCTION__API_PORT=8000
+TRADING_RL_AGENT_PRODUCTION__API_WORKERS=4
+TRADING_RL_AGENT_PRODUCTION__HEALTH_CHECK_INTERVAL=30
+TRADING_RL_AGENT_PRODUCTION__METRICS_EXPORT_INTERVAL=60
+
+# Agent Configuration
+TRADING_RL_AGENT_AGENT__AGENT_TYPE=sac
+TRADING_RL_AGENT_RISK__MAX_POSITION_SIZE=0.05
+TRADING_RL_AGENT_EXECUTION__BROKER=alpaca
